--- a/package.json
+++ b/package.json
@@ -6,21 +6,30 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server --config webpack.dev.js --open"
+    "build-dev": "webpack-dev-server --config webpack.dev.js --open",
+    "build-test": "webpack --config webpack.dev.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "autoprefixer": "^9.7.6",
     "aylien_textapi": "^0.7.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "exports-loader": "^0.7.0",
     "express": "^4.17.1",
+    "imports-loader": "^0.8.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "path": "^0.12.7",
+    "popper.js": "^1.16.1",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "terser-webpack-plugin": "^2.3.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -31,13 +40,19 @@
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.1",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^25.5.3",
+    "jquery": "^3.4.1",
     "node-sass": "^4.14.0",
     "sass": "^1.22.10",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
+    "transfer-webpack-plugin": "^0.1.4",
+    "url-loader": "^4.1.0",
     "webpack-bundle-analyzer": "^3.7.0",
     "workbox-webpack-plugin": "^5.1.3"
   }
