--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server --config webpack.dev.js --open",
@@ -16,6 +16,8 @@
   "dependencies": {
     "autoprefixer": "^9.7.6",
     "aylien_textapi": "^0.7.0",
+    "@babel/runtime": "^7.5.5",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
@@ -44,7 +47,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.1",
     "image-webpack-loader": "^6.0.0",
-    "jest": "^25.5.3",
+    "jest": "^25.5.4",
     "jquery": "^3.4.1",
     "node-sass": "^4.14.0",
     "sass": "^1.22.10",
