--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "test": "jest",
     "start": "node src/server/index.js",
-    "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server --config webpack.dev.js --open",
-    "build-test": "webpack --config webpack.dev.js"
+    "build": "webpack --config webpack.prod.js",
   },
   "keywords": [],
   "author": "",
