--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
     "start": "node src/server/index.js",
-    "build": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server --config webpack.dev.js --open",
-    "build-test": "webpack --config webpack.dev.js"
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -39,7 +36,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
-    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
@@ -47,7 +43,6 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.1",
     "image-webpack-loader": "^6.0.0",
-    "jest": "^25.5.4",
     "jquery": "^3.4.1",
     "node-sass": "^4.14.0",
     "sass": "^1.22.10",
@@ -56,7 +51,6 @@
     "style-loader": "^1.2.1",
     "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^4.1.0",
-    "webpack-bundle-analyzer": "^3.7.0",
     "workbox-webpack-plugin": "^5.1.3"
   }
 }
