--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "example-project",
+  "name": "Text Analyzer",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node src/server/index.js",
     "build": "webpack --config webpack.config.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["NLP","Natural Language Processor","Natural Language Processing", "Text Analyzer", "Text Processor", "Aylien API"],
+  "author": "Farhan Kiyani",
   "license": "ISC",
-  "description": "",
+  "description": "This application analyzes the given text or URL using Aylien API.",
   "dependencies": {
     "autoprefixer": "^9.7.6",
     "aylien_textapi": "^0.7.0",
@@ -39,7 +39,6 @@
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.1",
     "image-webpack-loader": "^6.0.0",
@@ -49,7 +48,6 @@
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
-    "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^4.1.0",
     "workbox-webpack-plugin": "^5.1.3"
   }
