--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "example-project",
+  "name": "Text Analyzer",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "start": "node src/server/index.js",
-    "build": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server --config webpack.dev.js --open",
-    "build-test": "webpack --config webpack.dev.js"
+    "build-prod": "webpack --config webpack.prod.js",
+    "Dev": "webpack-dev-server --config webpack.dev.js --open",
+    "build-dev": "webpack --config webpack.dev.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["NLP","Natural Language Processor","Natural Language Processing", "Text Analyzer", "Text Processor", "Aylien API"],
+  "author": "Farhan Kiyani",
   "license": "ISC",
-  "description": "",
+  "description": "This application analyzes the given text or URL using Aylien API.",
   "dependencies": {
     "autoprefixer": "^9.7.6",
     "aylien_textapi": "^0.7.0",
